--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,10 +9,18 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">Flight Suite</th></tr>
-<tr><td><a href="#t0">Flight Search Test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">8,652</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Flight Search Test</a></td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num attn">1</td><td class="num">40</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Flight Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Flight Search Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">Tests.Testcase</td><td><a href="#m0">testFlightBooking</a></td><td rowspan="1">1741853806404</td><td rowspan="1">3337</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Flight Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Flight Search Test &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">Tests.Testcase</td><td><a href="#m0">testFlightBooking</a></td><td rowspan="1">1741855026315</td><td rowspan="1">0</td></tr></tbody>
 </table>
-<h2>Flight Search Test</h2><h3 id="m0">Tests.Testcase#testFlightBooking</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr><tr class="param stripe"><td>Mexico City</td><td>London</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Flight Search Test</h2><h3 id="m0">Tests.Testcase#testFlightBooking</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.RuntimeException: java.io.FileNotFoundException: C:\Users\heman\eclipse-workspace\Selenium_maven2\src\test\resources\Excel\Book1.xlsx (The system cannot find the path specified)
+	at java.base/java.util.ArrayList.forEach(ArrayList.java:1511)
+Caused by: java.io.FileNotFoundException: C:\Users\heman\eclipse-workspace\Selenium_maven2\src\test\resources\Excel\Book1.xlsx (The system cannot find the path specified)
+	at java.base/java.io.FileInputStream.open0(Native Method)
+	at java.base/java.io.FileInputStream.open(FileInputStream.java:216)
+	at java.base/java.io.FileInputStream.&lt;init&gt;(FileInputStream.java:157)
+	at Tests.ExcelReading.readExcelData(ExcelReading.java:19)
+	... 25 more
+... Removed 32 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
